# AOgmaNeo

./: AOGMANEO_LICENSE.md  CMakeLists.txt  CONTRIBUTING.md  NameReference.md  README.md  TuningGuide.md
CMake/: FindAOgmaNeo.cmake
aogmaneo/: Array.h  Helpers.cpp  Hierarchy.h  Predictor.h  Ptr.h  SparseMatrix.cpp  SparseMatrix.h
ogmaneo/: Actor.cpp  Actor.h  Array.h  Helpers.cpp  Helpers.h  Hierarchy.cpp  Hierarchy.h  Predictor.cpp  Predictor.h  Ptr.h  SparseCoder.cpp  SparseCoder.h  SparseMatrix.cpp  SparseMatrix.h
source/aogmaneo/: Actor.cpp  Actor.h  Array.h  BlockSparseMatrix.cpp  BlockSparseMatrix.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  ErrorEncoder.cpp  ErrorEncoder.h  Helpers.cpp  Helpers.h  HiddenEncoder.cpp  HiddenEncoder.h  Hierarchy.cpp  Hierarchy.h  ImageEncoder.cpp  ImageEncoder.h  Layer.cpp  Layer.h  LocationInvariant.cpp  LocationInvariant.h  Predictor.cpp  Predictor.h  Ptr.h  RLAdapter.cpp  RLAdapter.h  ReconEncoder.cpp  ReconEncoder.h  Sheet.cpp  Sheet.h  SparseCoder.cpp  SparseCoder.h  SparseMatrix.cpp  SparseMatrix.h  StateAdapter.cpp  StateAdapter.h  actor.cpp  actor.h  (+25 more)
